# hellofresh-recipes

./: .gitignore  LICENSE  README.md  appConfig.py  pyproject.toml  scrapper.py
Entity/: recipe.py
Service/: database.py
client/front/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
client/front/src/components/: Filter.vue  Menu.vue  ReceipeBook.vue
client/front/src/models/: document.ts  recipe.ts
client/front/src/plugins/: translation.ts
client/front/src/router/: index.ts
client/front/src/store/: app.ts
client/front/src/views/: Recipe.vue  Scrapper.vue  WeeklyMenu.vue
server/: Dockerfile  appConfig.py  main.py  properties-exemple.toml  pyproject.toml
server/Entity/: saveToMenu.py
server/Service/: database.py  scrapper.py
