[tool.poetry]
name = "hellofreshrecipes"
version = "0.1.0"
description = "Retrieve recipes from the HelloFresh website and store them in either Elasticsearch or MongoDB."
authors = ["0lf4"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
elasticsearch = "^8.8.2"
pylint = "^2.17.5"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
